--- a/Coder/App/templates/app/index.html
+++ b/Coder/App/templates/app/index.html
@@ -8,15 +8,15 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Full Width Backgrounds</h2>
-                        <p class="lead">A single, lightweight helper class allows you to add engaging, full width background images to sections of your page.</p>
-                        <p class="mb-0">The universe is almost 14 billion years old, and, wow! Life had no problem starting here on Earth! I think it would be inexcusably egocentric of us to suggest that we're alone in the universe.</p>
+                        <h2>¿Que es una alimantación saludable?</h2>
+                        <p class="lead">Alimentación saludable es aquella que permite un estado óptimo de salud. Debe cubrir las necesidades energéticas y de nutrientes esenciales del cuerpo, incluyendo proteínas, carbohidratos, grasas, vitaminas, minerales y agua</p>
+                        <p class="mb-0">El principal problema de la alimentación actual es el consumo excesivo de calorías, principalmente de azúcares y grasas, además de la elevada ingesta de alcohol. La primera causa de mortalidad en nuestro país son las enfermedades cardiovasculares que se desarrollan en estrecha relación con la obesidad, sedentarismo y en especial, con el tipo de comida que se prefiere.</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/4ulffa6qoKA/1200x800')">
+        <div class="py-5 bg-image-full" style="background-image: url('{% static 'app/images/segundobanner.jpg' %}')"/>
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
             <div style="height: 20rem"></div>
         </div>
@@ -25,9 +25,7 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Engaging Background Images</h2>
-                        <p class="lead">The background images used in this template are sourced from Unsplash and are open source and free to use.</p>
-                        <p class="mb-0">I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course.</p>
+                        
                     </div>
                 </div>
             </div>
